# fasthtml-tailwind

./: README.md  components.py  main.py  pyproject.toml  tailwind.py
pages/: home.py
